--- a/_posts/2023-01-07-tiny-NN.md
+++ b/_posts/2023-01-07-tiny-NN.md
@@ -16,7 +16,7 @@ tags: NN c++
 
 ### C / C++
 - [LibNC](https://bellard.org/libnc/) - C Library for Tensor Manipulation by Fabrice Bellard (binary only / code on demand)
-- [Dlib](http://dlib.net/ml.html#add_layer) - c++
+- [Dlib]({% post_url 2021-03-05-cpp-dlib %}) - c++
 - [MicroGradCpp](https://bedirtapkan.com/projects/microgradcpp/) / [github](https://github.com/BedirT/microcpp) - MicroGrad implementation in C++ with a simple API.
 	- [micrograd-cpp](https://github.com/kpetrakis/micrograd-cpp)
     
