--- a/_posts/2023-01-26-cuda-amd.md
+++ b/_posts/2023-01-26-cuda-amd.md
@@ -6,3 +6,5 @@ tags: cuda amd gpu hardware
 > Using [Coriander](https://github.com/hughperkins/coriander) - [Hugh Perkins](https://stackoverflow.com/a/44448201/51386)
 
 ![caption](https://github.com/hughperkins/coriander/raw/master/doc/img/kernelcompilation.png?raw=true)
+
+### [Installation](https://github.com/hughperkins/coriander/blob/master/doc/installation.md)
