--- a/_posts/2023-01-31-svg-rope.md
+++ b/_posts/2023-01-31-svg-rope.md
@@ -3,6 +3,6 @@ published: true
 title: Draw SVG rope using JavaScript
 tags: svg
 ---
-> [transforming an SVG path into a vector rope drawing.](https://muffinman.io/blog/draw-svg-rope-using-javascript/)
+> [transforming an SVG path into a vector rope drawing.](https://muffinman.io/blog/draw-svg-rope-using-javascript/) / [HN](https://news.ycombinator.com/item?id=34197379)
 
 ![caption](https://muffinman.io/img/rope/path-to-rope.png)
