--- a/_posts/2023-01-31-svg-rope.md
+++ b/_posts/2023-01-31-svg-rope.md
@@ -5,4 +5,7 @@ tags: svg
 ---
 > [transforming an SVG path into a vector rope drawing.](https://muffinman.io/blog/draw-svg-rope-using-javascript/) / [HN](https://news.ycombinator.com/item?id=34197379)
 
+see also
+- [Breaking down Krypton](https://muffinman.io/blog/breaking-down-krypton/)
+
 ![caption](https://muffinman.io/img/rope/path-to-rope.png)
