--- a/_posts/2023-01-31-qemu.md
+++ b/_posts/2023-01-31-qemu.md
@@ -4,3 +4,6 @@ title: QEmu
 tags: qemu
 ---
 > [QEMU Internals](https://news.ycombinator.com/item?id=26941744)
+
+see also
+- [Emulating an emulator inside itself. Meet Blink](https://news.ycombinator.com/item?id=34250352)
