--- a/_posts/2023-04-20-math-n^m=m^n.md
+++ b/_posts/2023-04-20-math-n^m=m^n.md
@@ -3,7 +3,7 @@ published: true
 title: n^m = m^n
 tags: math puzzle
 ---
-> Only one pair of distinct positive integers satisfy the equation m^n = n^m - [HN](https://news.ycombinator.com/item?id=35635491)
+> Only one pair of distinct positive integers satisfy the equation $m^n = n^m$ - [HN](https://news.ycombinator.com/item?id=35635491)
 
 If n^m = m^n then raising both sides to the power of 1/(nm) gives us n^(1/n) = m^(1/m). So we are looking for two distinct positive integers at which the function x ↦ x^(1/x) takes the same value. The rest of the proof then goes as before.
 
