--- a/_posts/2023-04-20-math-n^m=m^n.md
+++ b/_posts/2023-04-20-math-n^m=m^n.md
@@ -2,6 +2,7 @@
 published: true
 title: n^m = m^n
 tags: math puzzle
+use_math: true
 ---
 > Only one pair of distinct positive integers satisfy the equation $m^n = n^m$ - [HN](https://news.ycombinator.com/item?id=35635491)
 
