--- a/_posts/2023-06-07-cpp-pair.md
+++ b/_posts/2023-06-07-cpp-pair.md
@@ -6,7 +6,7 @@ tags: c++
 >  a way to store two heterogeneous objects as a single unit. A pair is a specific case of a std::tuple with two elements. - [cppreference.com ](https://en.cppreference.com/w/cpp/utility/pair)
 
 see also
-- [Deduction guide](https://en.cppreference.com/w/cpp/language/class_template_argument_deduction) for [std::pair](https://en.cppreference.com/w/cpp/utility/pair/deduction_guides)
+- [Deduction guide](https://en.cppreference.com/w/cpp/utility/pair/deduction_guides)
 
 {% highlight cpp %}
 #include <utility>
@@ -16,7 +16,6 @@ std::pair p(2, 4.5);     // deduces to std::pair<int, double> p(2, 4.5); - since
 or
 int a[2], b[3];
 std::pair p{a, b}; // explicit deduction guide is used in this case
-
 
 auto p = std::make_pair(1, 3.14);
 std::cout << '(' << std::get<0>(p) << ", " << std::get<1>(p) << ")\n";
