--- a/_posts/2023-06-07-cpp-pair.md
+++ b/_posts/2023-06-07-cpp-pair.md
@@ -7,6 +7,8 @@ tags: c++
 
 see also
 - [Deduction guide](https://en.cppreference.com/w/cpp/utility/pair/deduction_guides)
+- [Difference between std::pair and std::tuple with only two members?](https://stackoverflow.com/questions/6687107/difference-between-stdpair-and-stdtuple-with-only-two-members)
+- [Why is std::pair faster than std::tuple](https://stackoverflow.com/questions/26863852/why-is-stdpair-faster-than-stdtuple)
 
 {% highlight cpp %}
 #include <utility>
