--- a/_posts/2023-06-07-cpp-pair.md
+++ b/_posts/2023-06-07-cpp-pair.md
@@ -8,7 +8,7 @@ tags: c++
 see also
 - [Deduction guide](https://en.cppreference.com/w/cpp/utility/pair/deduction_guides)
 - [Difference between std::pair and std::tuple with only two members?](https://stackoverflow.com/questions/6687107/difference-between-stdpair-and-stdtuple-with-only-two-members)
-- [Why is std::pair faster than std::tuple](https://stackoverflow.com/a/26864461/51386) - in the end results are equivalent
+- [Why is std::pair faster than std::tuple](https://stackoverflow.com/a/26864461/51386) - in the end, performance results are equivalent/the same.
 
 {% highlight cpp %}
 #include <utility>
