--- a/_posts/2023-06-07-cpp-pair.md
+++ b/_posts/2023-06-07-cpp-pair.md
@@ -9,6 +9,7 @@ see also
 - [Deduction guide](https://en.cppreference.com/w/cpp/utility/pair/deduction_guides)
 - [Difference between std::pair and std::tuple with only two members?](https://stackoverflow.com/questions/6687107/difference-between-stdpair-and-stdtuple-with-only-two-members)
 - [Why is std::pair faster than std::tuple](https://stackoverflow.com/a/26864461/51386) - in the end, performance results are equivalent/the same.
+	- It is fully expected that std::tuple will be slower than std::pair when not optimized, because it is more complicated object.
 
 {% highlight cpp %}
 #include <utility>
