--- a/_posts/2023-06-07-cpp-pair.md
+++ b/_posts/2023-06-07-cpp-pair.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: 'std::pair'
-tags: c++
+tags: c++ tuple
 ---
 >  a way to store two heterogeneous objects as a single unit. A pair is a specific case of a std::tuple with two elements. - [cppreference.com ](https://en.cppreference.com/w/cpp/utility/pair)
 
