--- a/_posts/2023-06-21-sdcard.md
+++ b/_posts/2023-06-21-sdcard.md
@@ -3,7 +3,7 @@ published: true
 title: SDCard
 tags: hardware storage
 ---
->  counterfeit SD cards are still an issue checking with F3/H2testw directly after purchase is highly recommended. - [How to prepare a SD card?](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card)
+>  counterfeit SD cards are still an issue checking with [F3](https://fight-flash-fraud.readthedocs.io/en/stable/) / [H2testw](https://www.heise.de/download/product/h2testw-50539) directly after purchase is highly recommended. - [How to prepare a SD card?](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card)
 
 [![A1 and A2 cards from sandisk](https://raw.githubusercontent.com/armbian/documentation/master/docs/images/sandisk-extremepro-a1.png)](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card)
 
