--- a/_posts/2023-06-21-sdcard.md
+++ b/_posts/2023-06-21-sdcard.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: SDCard
-tags: hardware storage
+tags: hardware storage evil
 ---
 >  counterfeit SD cards are still an issue checking with [F3](https://fight-flash-fraud.readthedocs.io/en/stable/) / [H2testw](https://www.heise.de/download/product/h2testw-50539) directly after purchase is highly recommended. - [How to prepare a SD card?](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card)
 
