--- a/_posts/2023-06-21-sdcard.md
+++ b/_posts/2023-06-21-sdcard.md
@@ -7,6 +7,8 @@ tags: hardware storage evil
 
 - [F3](https://fight-flash-fraud.readthedocs.io/en/stable/) -  Fight Flash Fraud
 
+In case you chose an SD card that was already in use before please consider resetting it back to ‘factory default’ performance with SD Formatter before burning.
+
 [![A1 and A2 cards from sandisk](https://raw.githubusercontent.com/armbian/documentation/master/docs/images/sandisk-extremepro-a1.png)](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card)
 
 
