--- a/_posts/2023-06-21-sdcard.md
+++ b/_posts/2023-06-21-sdcard.md
@@ -3,7 +3,7 @@ published: true
 title: SDCard
 tags: hardware storage evil
 ---
->  counterfeit SD cards are still an issue checking with [F3](https://fight-flash-fraud.readthedocs.io/en/stable/) / [H2testw](https://www.heise.de/download/product/h2testw-50539) directly after purchase is highly recommended. - [How to prepare a SD card?](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card)
+>  counterfeit SD cards are still an issue checking with [F3](https://fight-flash-fraud.readthedocs.io/en/stable/) / [H2testw](https://www.heise.de/download/product/h2testw-50539) directly after purchase is highly recommended. - [How to prepare a SD card?](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card) / [SDCard list](https://github.com/yduf/sdcard/issues/1)
 
 - [F3](https://fight-flash-fraud.readthedocs.io/en/stable/) -  Fight Flash Fraud
 
@@ -12,6 +12,5 @@ In case you chose an SD card that was already in use before please consider rese
 Write the xz compressed image with USBImager or balenaEtcher on all platforms since unlike other tools, either can validate burning results saving you from corrupted SD card contents.
 
 [![A1 and A2 cards from sandisk](https://raw.githubusercontent.com/armbian/documentation/master/docs/images/sandisk-extremepro-a1.png)](https://docs.armbian.com/User-Guide_Getting-Started/#how-to-prepare-a-sd-card)
-
 
 Also important: Most SD cards are only optimised for sequential reads/writes as it is common with digital cameras. This is what the speed class is about. The SD Association defined Application Performance Class as a standard for random IO performance.
