--- a/_posts/2023-08-07-6bits-text.md
+++ b/_posts/2023-08-07-6bits-text.md
@@ -4,3 +4,7 @@ title: 6bits text
 tags: ruby codegolf text zip
 ---
 > Using uu packer, we can achieve 6bits text encoding in specific case - [Compression in Golf: Part I](https://www.perlmonks.org/?node_id=995190)/[Uuencoding](https://en.wikipedia.org/wiki/Uuencoding)
+
+see also
+- [Base64](https://en.wikipedia.org/wiki/Base64) -  binary-to-text encoding schemes that represent binary data  in sequences of 24 bits that can be represented by four 6-bit Base64 digits.
+- [Why did base64 win against uuencode?](https://retrocomputing.stackexchange.com/questions/3019/why-did-base64-win-against-uuencode)
