--- a/_posts/2023-08-07-6bits-text.md
+++ b/_posts/2023-08-07-6bits-text.md
@@ -7,4 +7,5 @@ tags: ruby codegolf text zip
 
 see also
 - [Base64](https://en.wikipedia.org/wiki/Base64) -  binary-to-text encoding schemes that represent binary data  in sequences of 24 bits that can be represented by four 6-bit Base64 digits.
+	- [encode64(bin)](https://stackoverflow.com/questions/16595740/ruby-character-encoding-when-using-base64-encode) -  The encode64 method is simply this: `[bin].pack("m")`
 - [Why did base64 win against uuencode?](https://retrocomputing.stackexchange.com/questions/3019/why-did-base64-win-against-uuencode)
