--- a/_posts/2023-08-23-no-exit.md
+++ b/_posts/2023-08-23-no-exit.md
@@ -4,3 +4,5 @@ title: Exit
 tags: book comix exit labyrinth
 ---
 > There's no Exit - [The Invisible Horror of 'The Labyrinth'](https://www.youtube.com/watch?v=XMFhD9JB9bQ)
+
+![caption](https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.safetysign.com%2Fimages%2Fsource%2Flarge-images%2FA5119.png&f=1&nofb=1&ipt=6987c83233c2328174c083de61395401353b1c80bd794146ec3f5c641d439af9&ipo=images)
