[jekyll] - fix + order tags by title

--- a/_posts/2021-04-30-qemu.md
+++ b/_posts/2021-04-30-qemu.md
@@ -6,3 +6,8 @@ tags: arm x86 emulator
 > QEMU is a generic and open source machine emulator and virtualizer. - [qemu.org](https://www.qemu.org/)
 
 - [Using QEMU-user emulation to reverse engineer binaries](https://ariadne.space/2021/05/05/using-qemu-user-emulation-to-reverse-engineer-binaries/) / [HN](https://news.ycombinator.com/item?id=27046272)
+
+
+see also
+- [QEMU Internals](https://news.ycombinator.com/item?id=26941744)
+- [Emulating an emulator inside itself. Meet Blink](https://news.ycombinator.com/item?id=34250352)
