--- a/_posts/2020-04-28-0.99-and-1.md
+++ b/_posts/2020-04-28-0.99-and-1.md
@@ -1,6 +1,6 @@
 ---
 published: true
-title: 0.999... == 1.0
+title: "0.999... == 1.0"
 tags: math paradox
 ---
 > More generally, every nonzero terminating decimal has two equal representations (for example, 8.32 and 8.31999...), which is a property of all base representations. The utilitarian preference for the terminating decimal representation contributes to the misconception that it is the only representation. For this and other reasons—such as rigorous proofs relying on non-elementary techniques, properties, or disciplines—some people can find the equality sufficiently counterintuitive that they question or reject it. This has been the subject of several studies in mathematics education.  - [wikipedia](https://en.wikipedia.org/wiki/0.999...) - [HN](https://news.ycombinator.com/item?id=23004086)
