--- a/_posts/2023-09-01-ruby-xml.md
+++ b/_posts/2023-09-01-ruby-xml.md
@@ -8,5 +8,6 @@ tags: xml ruby
 You have these solution
 - [rexml](https://github.com/ruby/rexml)
 	- [REXML Tutorial ](https://germane-software.com/software/XML/rexml/docs/tutorial.html)
-- []()
-- []()
+- [Nokogiri](https://nokogiri.org/)
+- [xmlmapper](https://github.com/digidentity/xmlmapper) / [ happymapper
+](https://github.com/mvz/happymapper)
