--- a/_posts/2023-09-01-ruby-xml.md
+++ b/_posts/2023-09-01-ruby-xml.md
@@ -9,5 +9,5 @@ You have these solution
 - [rexml](https://github.com/ruby/rexml)
 	- [REXML Tutorial ](https://germane-software.com/software/XML/rexml/docs/tutorial.html)
 - [Nokogiri](https://nokogiri.org/)
-- [xmlmapper](https://github.com/digidentity/xmlmapper) / [ happymapper
-](https://github.com/mvz/happymapper)
+- [happymapper](https://github.com/mvz/happymapper) - for object mapping to xml
+	- (old fork) [xmlmapper](https://github.com/digidentity/xmlmapper) ?
