--- a/_posts/2023-09-01-ruby-xml.md
+++ b/_posts/2023-09-01-ruby-xml.md
@@ -3,7 +3,7 @@ published: true
 title: XML (Ruby)
 tags: xml ruby
 ---
-> Parsing XML with Ruby - [SO](https://stackoverflow.com/questions/11198239/parsing-xml-with-ruby)
+> Parsing XML with Ruby - [SO](https://stackoverflow.com/questions/11198239/parsing-xml-with-ruby) / [ruby toolbox](https://www.ruby-toolbox.com/search?q=xml)
 
 You have these solution
 - [rexml](https://github.com/ruby/rexml)
