--- a/_posts/2023-09-01-ruby-xml.md
+++ b/_posts/2023-09-01-ruby-xml.md
@@ -5,7 +5,7 @@ tags: xml ruby
 ---
 > Parsing XML with Ruby - [SO](https://stackoverflow.com/questions/11198239/parsing-xml-with-ruby) / [ruby toolbox](https://www.ruby-toolbox.com/search?q=xml)
 
-You have these solution
+You have these solution:
 - [rexml](https://github.com/ruby/rexml)
 	- [REXML Tutorial ](https://germane-software.com/software/XML/rexml/docs/tutorial.html)
 - [Nokogiri](https://nokogiri.org/)
