--- a/_posts/2023-09-18-cmake.md
+++ b/_posts/2023-09-18-cmake.md
@@ -3,4 +3,6 @@ published: true
 title: CMake
 tags: build-system
 ---
-- [How do I install the latest version of cmake ?](https://duckduckgo.com/?t=lm&q=ubuntu+update+cmake&ia=web)
+- [How do I install the latest version of cmake ?](https://stackoverflow.com/a/56690743/51386)
+
+Follow install instructio from Kitware repo.
