--- a/_posts/2023-09-18-cmake.md
+++ b/_posts/2023-09-18-cmake.md
@@ -5,4 +5,4 @@ tags: build-system
 ---
 - [How do I install the latest version of cmake ?](https://stackoverflow.com/a/56690743/51386)
 
-Follow install instructio from Kitware repo.
+Follow install instructio from [Kitware repo](https://apt.kitware.com/).
