--- a/_posts/2023-09-24-pincab-b2bs.md
+++ b/_posts/2023-09-24-pincab-b2bs.md
@@ -3,4 +3,4 @@ published: true
 title: B2S (Backglass 2nd Screen)
 tags: pincab
 ---
-> The B2S Server system files are used to run .directB2S backglasses for the open source pinball table editor and simulator called Visual Pinball. The B2S Server is a small piece of the puzzle in the virtual pinball universe. - [wiki](https://github.com/vpinball/b2s-backglass/wiki)
+> The B2S Server system files are used to run .directB2S backglasses for the open source pinball table editor and simulator called Visual Pinball. The B2S Server is a small piece of the puzzle in the virtual pinball universe. - [wiki](https://github.com/vpinball/b2s-backglass/wiki) / [github](https://github.com/vpinball/b2s-backglass)
