--- a/_posts/2023-09-25-3dpriner-the100.md
+++ b/_posts/2023-09-25-3dpriner-the100.md
@@ -3,7 +3,10 @@ published: true
 title: The 100 (3dprinter)
 tags: 3dprinter project
 ---
->  03:03 (mm:ss) - The fastest 3D Benchy on THE 100 printer - [youtube](https://www.youtube.com/watch?v=vFl2jJjkkyE) / [github](https://github.com/MSzturc/the100)
+>  03:03 (mm:ss) - The fastest 3D Benchy on THE 100 printer - [youtube](https://www.youtube.com/watch?v=vFl2jJjkkyE) / [github](https://github.com/MSzturc/the100) / [hackaday.io](https://hackaday.io/project/190348-the-100-the-fastest-3d-printer)
+
+see also
+- [THE 100 - The World's Fastest 3D Printer](https://www.youtube.com/watch?v=0K9NM08S0IA&list=PLh9akXp2EH2ATO7fJ6EVeahKw5azFSTue&index=63)
 
 Project:
 - convert remain of [dagoma]({% post_url 2017-09-16-disco-easy %}) to a 100 clone.
