--- a/_posts/2018-10-08-graphviz.md
+++ b/_posts/2018-10-08-graphviz.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Graphviz
-tags: graph tree visualizer vscode online document markdown
+tags: graph tree visualizer vscode online doc markdown
 ---
 > Graphviz is open source graph visualization software. It has several main graph layout programs. - [Home](https://graphviz.org) / [online](http://viz-js.com/)
 
