--- a/_posts/2021-12-10-document.md
+++ b/_posts/2021-12-10-document.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Document Legal retention
-tags: document
+tags: doc
 ---
 > [Papiers à conserver](https://www.service-public.fr/particuliers/vosdroits/F19134)
 
