--- a/_posts/2022-01-05-edit-pdf.md
+++ b/_posts/2022-01-05-edit-pdf.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Edit / Sign PDF
-tags: pdf document text
+tags: pdf doc text
 ---
 > PDF processing and analysis with open-source tools - [HN](https://news.ycombinator.com/item?id=33145498)
 
