--- a/_posts/2023-10-12-float-nan.md
+++ b/_posts/2023-10-12-float-nan.md
@@ -1,5 +1,7 @@
 ---
-published: false
+published: true
+title: Nan & Infinity
+tags: math float
 ---
 > [NaN Gates and Flip FLOPS](https://www.youtube.com/watch?v=5TFDG-y-EHs) / []()
 
