--- a/_posts/2023-10-12-float-nan.md
+++ b/_posts/2023-10-12-float-nan.md
@@ -3,7 +3,7 @@ published: true
 title: Nan & Infinity
 tags: math float
 ---
-> [NaN Gates and Flip FLOPS](https://www.youtube.com/watch?v=5TFDG-y-EHs) / []()
+> [NaN Gates and Flip FLOPS](https://www.youtube.com/watch?v=5TFDG-y-EHs)
 
 see also
 - [	Subtraction is functionally complete ](https://news.ycombinator.com/item?id=37800062)
