--- a/_posts/2023-10-21-text-scan.md
+++ b/_posts/2023-10-21-text-scan.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Scan PDF
-tags: ocr text pdf
+tags: ocr scan text pdf
 ---
 > [Microsoft Lens - PDF Scanner](https://play.google.com/store/apps/details?id=com.microsoft.office.officelens) / [demo](https://support.microsoft.com/en-us/office/microsoft-lens-for-ios-fbdca5f4-1b1b-4391-a931-dc1c2582397b)
 
