--- a/_posts/2023-10-30-pico8-text.md
+++ b/_posts/2023-10-30-pico8-text.md
@@ -1,6 +1,10 @@
 ---
 published: true
 title: Text (Pico-8)
-tags: pico8 text
+tags: pico8 printf text
 ---
 > [print magic](https://pico-8.fandom.com/wiki/P8SCII_Control_Codes)
+
+### [Special Commands](https://pico-8.fandom.com/wiki/P8SCII_Control_Codes?veaction=edit&section=3)
+
+- [Positioning text / Changing text colors / Skipping frames ](https://pico-8.fandom.com/wiki/P8SCII_Control_Codes?veaction=edit&section=3)
