--- a/_posts/2023-10-30-pico8-text.md
+++ b/_posts/2023-10-30-pico8-text.md
@@ -7,4 +7,8 @@ tags: pico8 printf text
 
 ### [Special Commands](https://pico-8.fandom.com/wiki/P8SCII_Control_Codes?veaction=edit&section=3)
 
-- [Positioning text / Changing text colors / Skipping frames ](https://pico-8.fandom.com/wiki/P8SCII_Control_Codes?veaction=edit&section=3)
+- Positioning text / Changing text colors 
+- Skipping frames
+- Poking memory
+
+**\^b** : Bordered. Text has left and top padding.
