--- a/_posts/2023-10-30-pico8-text.md
+++ b/_posts/2023-10-30-pico8-text.md
@@ -11,4 +11,6 @@ tags: pico8 printf text
 - Skipping frames
 - Poking memory
 
-**\^b** : Bordered. Text has left and top padding.
+**\^b** : Bordered. Text has left and top padding. - TBD ?
+
+### [Outline print function](https://www.lexaloffle.com/bbs/?tid=45020)
