--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -1,6 +1,10 @@
 ---
 published: true
 title: '# lua'
-tags: lua lang
+tags: lua lang pico8
 ---
->  a lightweight embeddable scripting language. - [Lua](https://www.lua.org/start.html)
+>  a lightweight embeddable scripting language. - [Lua](https://www.lua.org/start.html) / [online](https://www.lua.org/cgi-bin/demo)
+
+### [Testing](https://github.com/LewisJEllis/awesome-lua#testing)
+
+### [Setup]()
