--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -7,4 +7,4 @@ tags: lua lang pico8
 
 ### [Testing](https://github.com/LewisJEllis/awesome-lua#testing)
 
-### [Setup]()
+### [Setup](https://www.geeksforgeeks.org/how-to-install-and-setup-lua-in-linux/)
