--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -8,3 +8,8 @@ tags: lua lang pico8
 ### [Testing](https://github.com/LewisJEllis/awesome-lua#testing)
 
 ### [Setup](https://www.geeksforgeeks.org/how-to-install-and-setup-lua-in-linux/)
+
+### Pico-8
+
+- [z8lua](https://github.com/madcock/z8lua#z8lua) - a fork of Lua that implements the PICO-8 dialect.
+
