--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -12,4 +12,5 @@ tags: lua lang pico8
 ### Pico-8
 
 - [z8lua](https://github.com/madcock/z8lua#z8lua) - a fork of Lua that implements the PICO-8 dialect.
+- [Going from Lua 5.2 to PICO-8's Lua ](https://gist.github.com/josefnpat/bfe4aaa5bbb44f572cd0)
 
