--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -8,8 +8,11 @@ tags: lua lang pico8
 ### [Testing](https://github.com/LewisJEllis/awesome-lua#testing)
 
 ### [Setup](https://www.geeksforgeeks.org/how-to-install-and-setup-lua-in-linux/)
+{% highlight bash %}
+$ sudo apt install lua5.2   # this is the closest to PICO-8 v0.2.5g
+{% endhighlight %}
 
-### Pico-8
+### [Pico-8](https://www.lexaloffle.com/dl/docs/pico-8_manual.html)
 
 - [z8lua](https://github.com/madcock/z8lua#z8lua) - a fork of Lua that implements the PICO-8 dialect.
 - [Going from Lua 5.2 to PICO-8's Lua ](https://gist.github.com/josefnpat/bfe4aaa5bbb44f572cd0)
