--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -5,7 +5,13 @@ tags: lua lang pico8
 ---
 >  a lightweight embeddable scripting language. - [Lua](https://www.lua.org/start.html) / [online](https://www.lua.org/cgi-bin/demo)
 
-### [Testing](https://github.com/LewisJEllis/awesome-lua#testing)
+### [Unit Testing](https://github.com/LewisJEllis/awesome-lua#testing)
+
+[**busted**](https://lunarmodules.github.io/busted/#overview) 
+{% highlight bash %}
+$ luarocks install busted
+$ luarocks install moonrocks
+{% endhighlight %}
 
 ### [Setup](https://www.geeksforgeeks.org/how-to-install-and-setup-lua-in-linux/)
 {% highlight bash %}
