--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -7,7 +7,7 @@ tags: lua lang pico8
 
 ### [Unit Testing](https://github.com/LewisJEllis/awesome-lua#testing)
 
-[**busted**](https://lunarmodules.github.io/busted/#overview) 
+[**busted**](https://lunarmodules.github.io/busted/#overview) - **FALING on LinuxMint _2023/10_
 {% highlight bash %}
 $ luarocks install busted
 $ luarocks install moonrocks
