--- a/_posts/2023-10-31-lang-lua.md
+++ b/_posts/2023-10-31-lang-lua.md
@@ -3,7 +3,7 @@ published: true
 title: '# lua'
 tags: lua lang pico8
 ---
->  a lightweight embeddable scripting language. - [Lua](https://www.lua.org/start.html) / [online](https://www.lua.org/cgi-bin/demo)
+>  a lightweight embeddable scripting language. - [Lua](https://www.lua.org/start.html) / [online](https://www.lua.org/cgi-bin/demo) / [Lua Guide](https://docs.otland.net/lua-guide/)
 
 ### [Unit Testing](https://github.com/LewisJEllis/awesome-lua#testing)
 
