--- a/_posts/2023-11-03-pico8-music.md
+++ b/_posts/2023-11-03-pico8-music.md
@@ -7,4 +7,10 @@ tags: music pico8
 
 - [Pico-8 Tunes Volume 1](https://www.lexaloffle.com/bbs/?tid=29008) - a cart with music that others can use in their games.
 
+### Midi?
+
+- [kittenm4ster's MIDI to PICO-8 Tracker Translator](https://github.com/andmatand/midi-to-pico8#kittenm4sters-midi-to-pico-8-tracker-translator) -  _It just works, sometimes!_
+- [midi2pico](https://github.com/gamax92/midi2pico#midi2pico) / [demo](https://www.lexaloffle.com/bbs/?tid=28792) - A Midi to PICO-8 converter.
+
+
 
