--- a/_posts/2023-11-03-pico8-music.md
+++ b/_posts/2023-11-03-pico8-music.md
@@ -7,10 +7,18 @@ tags: music pico8
 
 - [Pico-8 Tunes Volume 1](https://www.lexaloffle.com/bbs/?tid=29008) - a cart with music that others can use in their games.
 
+
 ### [Midi?](https://www.lexaloffle.com/bbs/?tid=31265)
 
 - [kittenm4ster's MIDI to PICO-8 Tracker Translator](https://github.com/andmatand/midi-to-pico8#kittenm4sters-midi-to-pico-8-tracker-translator) -  _It just works, sometimes!_
 - [midi2pico](https://github.com/gamax92/midi2pico#midi2pico) / [demo](https://www.lexaloffle.com/bbs/?tid=28792) - A Midi to PICO-8 converter.
+
+Keyboard laid out
+
+{% highlight text %}
+ s d  g h j               <--sharps   c#d#f#g#a#                     
+z x cv b n m              <--naturals cdefgab  
+{% endhighlight %}
 
 
 
