--- a/_posts/2023-11-03-pico8-music.md
+++ b/_posts/2023-11-03-pico8-music.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Music (Pico-8)
-tags: music pico8
+tags: music pico8 midi
 ---
 > Getting Started with Sound and Music - [nerdyteachers](https://nerdyteachers.com/PICO-8/Music/GettingStarted/)
 
@@ -20,5 +20,8 @@ Keyboard laid out
 z x cv b n m              <--naturals cdefgab  
 {% endhighlight %}
 
+Or remapp midi to keyboard input:
+- [midi2input](https://gitlab.com/enetheru/midi2input#) - Convert live midi ON events into simulated key presses, commands, whatever
+- [midimap](https://github.com/olavfosse/midimap#midimap) - Map MIDI events to simulated keyboard events.
 
 
