--- a/_posts/2023-11-03-pico8-music.md
+++ b/_posts/2023-11-03-pico8-music.md
@@ -20,7 +20,7 @@ Keyboard laid out
 z x cv b n m              <--naturals cdefgab  
 {% endhighlight %}
 
-Or remapp midi to keyboard input:
+Or [remap midi event to keyboard input](https://superuser.com/questions/1170136/translating-midi-input-into-computer-keystrokes-on-linux):
 - [midi2input](https://gitlab.com/enetheru/midi2input#) - Convert live midi ON events into simulated key presses, commands, whatever
 - [midimap](https://github.com/olavfosse/midimap#midimap) - Map MIDI events to simulated keyboard events.
 
