--- a/_posts/2023-11-03-pico8-music.md
+++ b/_posts/2023-11-03-pico8-music.md
@@ -3,7 +3,7 @@ published: true
 title: Music (Pico-8)
 tags: music pico8 midi
 ---
-> Getting Started with Sound and Music - [nerdyteachers](https://nerdyteachers.com/PICO-8/Music/GettingStarted/)
+> Getting Started with Sound and Music - [nerdyteachers](https://nerdyteachers.com/PICO-8/Music/GettingStarted/) / [demo](https://www.youtube.com/playlist?list=PLur95ujyAigv4Qt2kvWYE_I-xZs8RURhA)
 
 - [Pico-8 Tunes Volume 1](https://www.lexaloffle.com/bbs/?tid=29008) - a cart with music that others can use in their games.
 
