--- a/_posts/2023-11-03-pico8-music.md
+++ b/_posts/2023-11-03-pico8-music.md
@@ -3,10 +3,12 @@ published: true
 title: Music (Pico-8)
 tags: music pico8 midi
 ---
-> Getting Started with Sound and Music - [nerdyteachers](https://nerdyteachers.com/PICO-8/Music/GettingStarted/) / [demo](https://www.youtube.com/playlist?list=PLur95ujyAigv4Qt2kvWYE_I-xZs8RURhA)
+> Getting Started with Sound and Music - [nerdyteachers](https://nerdyteachers.com/PICO-8/Music/GettingStarted/) 
+
+### [Demo](https://www.youtube.com/playlist?list=PLur95ujyAigv4Qt2kvWYE_I-xZs8RURhA)
 
 - [Pico-8 Tunes Volume 1](https://www.lexaloffle.com/bbs/?tid=29008) - a cart with music that others can use in their games.
-
+- [Bach's Fugue in E minor, BWV 854 (Pico-8 Cover)](https://www.youtube.com/watch?v=5YmtF-W2mis&list=PLur95ujyAigv4Qt2kvWYE_I-xZs8RURhA&index=17)
 
 ### [Midi?](https://www.lexaloffle.com/bbs/?tid=31265)
 
