--- a/_posts/2023-11-12-games-pico8.md
+++ b/_posts/2023-11-12-games-pico8.md
@@ -11,6 +11,7 @@ tags: games pico8
 
 ### Puzzle
 - [Matchy Matchy](https://www.lexaloffle.com/bbs/?tid=4022) - Connect pairs ( or more ) of matching animals to solve puzzles
+- [MOTION<span style="color:red">●</span>REC](https://www.lexaloffle.com/bbs/?pid=131910#p) - puzzle with the concept of "recording and replaying movements."
 
 ### Cute
 - [I Just Wanna Land!](https://www.lexaloffle.com/bbs/?pid=56075#p) - help this bird
