--- a/_posts/2023-11-12-games-pico8.md
+++ b/_posts/2023-11-12-games-pico8.md
@@ -9,6 +9,9 @@ tags: games pico8
 - [Porklike](https://www.lexaloffle.com/bbs/?tid=37045) -  a minimalistic, classic [Roguelike](https://www.youtube.com/watch?v=HnY7Inp74dw&list=PLea8cjCua_P3LL7J1Q9b6PJua0A-96uUS)
 - [Beckon the Hellspawn](https://www.lexaloffle.com/bbs/?pid=125548#p) - Survive against hordes of relentless creatures by using your arcane powers to defeat them.
 
+### Classic/Remake
+- [Dinky Kong](https://www.lexaloffle.com/bbs/?tid=51877)
+
 ### Puzzle
 - [Matchy Matchy](https://www.lexaloffle.com/bbs/?tid=4022) - Connect pairs ( or more ) of matching animals to solve puzzles
 - [MOTION<span style="color:red">●</span>REC](https://www.lexaloffle.com/bbs/?pid=131910#p) - puzzle with the concept of "recording and replaying movements."
