--- a/_posts/2023-11-12-games-pico8.md
+++ b/_posts/2023-11-12-games-pico8.md
@@ -5,6 +5,9 @@ tags: games pico8
 ---
 > Choose one 
 
+[![caption](https://www.lexaloffle.com/media/66501/dkbanner_6x.jpg)](https://www.lexaloffle.com/bbs/?tid=51877)
+
+
 ### Donjon
 - [Porklike](https://www.lexaloffle.com/bbs/?tid=37045) -  a minimalistic, classic [Roguelike](https://www.youtube.com/watch?v=HnY7Inp74dw&list=PLea8cjCua_P3LL7J1Q9b6PJua0A-96uUS)
 - [Beckon the Hellspawn](https://www.lexaloffle.com/bbs/?pid=125548#p) - Survive against hordes of relentless creatures by using your arcane powers to defeat them.
@@ -21,3 +24,7 @@ tags: games pico8
 
 ### Misc
 - [Moonrace](https://www.lexaloffle.com/bbs/?pid=85776#p) - Micro Machines on the moon
+- [X-Wing vs. Tie Fighter: Attack on the Deathstar](https://www.lexaloffle.com/bbs/?pid=53727#p)
+
+### Adventure
+- []()
