--- a/_posts/2017-03-28-first.md
+++ b/_posts/2017-03-28-first.md
@@ -141,6 +141,23 @@ Example:
 
 ## Other
 
+- [How do I customize Jekyll theme for a single page in GitHub pages?](https://stackoverflow.com/questions/54312553/how-do-i-customize-jekyll-theme-for-a-single-page-in-github-pages)
+
+The easiest way would be to just define a new layout for your help.md
+
+- Create a copy of the layout currently used by help.md (say, page.html)
+- Rename the new layout as help.html (path: _layouts/help.html)
+- Remove markup that renders the large hero header
+
+Use layout: help in the front matter of help.md:
+
+{% highlight ruby %}
+---
+layout: help
+---
+{% endhighlight %}
+
+
 ### [Diagnosing on Github](https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/about-jekyll-build-errors-for-github-pages-sites)
 
 [Github Jekyll pages](https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/testing-your-github-pages-site-locally-with-jekyll)
