--- a/_posts/2023-11-24-camera-kb700.md
+++ b/_posts/2023-11-24-camera-kb700.md
@@ -17,3 +17,5 @@ They are working in MJPG format.
 
 But in this format compression artifact are visible
 
+Tested with [CameraCtrls](https://github.com/soyersoyer/cameractrls)
+
