--- a/_posts/2023-11-24-camera-kb700.md
+++ b/_posts/2023-11-24-camera-kb700.md
@@ -17,5 +17,8 @@ They are working in MJPG format.
 
 But in this format compression artifact are visible
 
-Tested with [CameraCtrls](https://github.com/soyersoyer/cameractrls)
+Tested with
+- [guvcview]() - gives more control & is able to take snapshot even when the device is giving timeout to V4L2
+- [CameraCtrls](https://github.com/soyersoyer/cameractrls) - Timeout make the application crash
+
 
