--- a/_posts/2023-11-24-camera-kb700.md
+++ b/_posts/2023-11-24-camera-kb700.md
@@ -18,7 +18,7 @@ They are working in MJPG format.
 But in this format compression artifact are visible
 
 Tested with
-- [guvcview]() - gives more control & is able to take snapshot even when the device is giving timeout to V4L2
+- [guvcview](https://linuxmasterclub.com/guvcview/) - gives more control & is able to take snapshot even when the device is giving timeout to V4L2
 - [CameraCtrls](https://github.com/soyersoyer/cameractrls) - Timeout make the application crash
 
 
