--- a/_posts/2023-11-24-camera-kb700.md
+++ b/_posts/2023-11-24-camera-kb700.md
@@ -22,5 +22,7 @@ They are working in MJPG format.
 
 But in this format compression artifact are visible
 
+### see also
+- [Webcam]({% post_url 2020-08-20-webcam-latency %})
 
 
