--- a/_posts/2023-11-24-camera-kb700.md
+++ b/_posts/2023-11-24-camera-kb700.md
@@ -20,7 +20,7 @@ Timeout when trying to acquire photo in YUYV mode for resulotion greater than 10
 
 They are working in MJPG format.
 
-But in this format compression artifact are visible
+Contrast artifact are visible, not yet clear where they are coming from.
 
 ### see also
 - [Webcam]({% post_url 2020-08-20-webcam-latency %})
