--- a/_posts/2023-12-03-llm-llama.md
+++ b/_posts/2023-12-03-llm-llama.md
@@ -1,8 +1,11 @@
 ---
 published: true
 title: Llama
-tags: LLM
+tags: LLM NN
 ---
 > A 2 files on prem LLM. - [Intro to Large Language Models](https://www.youtube.com/watch?v=zjkBMFhNj_g&t=2867s)
 
 - [How To Run Llama 2 on Anything](https://medium.com/timesurge-labs/how-to-run-llama-2-on-anything-79fc007e2518)
+
+### see also
+- [Let's build GPT: from scratch, in code, spelled out.](https://www.youtube.com/watch?v=kCc8FmEb1nY)
