--- a/_posts/2023-12-12-time.md
+++ b/_posts/2023-12-12-time.md
@@ -4,3 +4,7 @@ title: Wasting Time
 tags: life
 ---
 > There’s no one at the end of the tunnel grading me on how I used my time. Time as a resource to be used is a human invention. - [In Praise of Wasting Your Time](https://shubhamjain.co/2023/12/12/in-praise-wasting-your-time/)
+
+Recently, the absurdity of all of it hit me.
+
+The expectations that I had for myself weren’t my expectations at all. They were of the society I lived in, and the stories I had consumed. 
