--- a/_posts/2023-12-12-time.md
+++ b/_posts/2023-12-12-time.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Wasting Time
-tags: life
+tags: life blog
 ---
 > There’s no one at the end of the tunnel grading me on how I used my time. Time as a resource to be used is a human invention. - [In Praise of Wasting Your Time](https://shubhamjain.co/2023/12/12/in-praise-wasting-your-time/)
 
