--- a/_posts/2023-12-23-enigma.md
+++ b/_posts/2023-12-23-enigma.md
@@ -8,4 +8,4 @@ tags: crypto
 - [La RÉALITÉ derrière IMITATION GAME (et Alan Turing)](https://www.youtube.com/watch?v=zZ-vrXXiCes)
 
 ### see also
-- [Banburismus](https://en.wikipedia.org/wiki/Banburismus)
+- [Banburismus](https://en.wikipedia.org/wiki/Banburismus) - a cryptanalytic process developed by Alan Turing at Bletchley Park in Britain during the Second World War.
