--- a/_posts/2023-12-23-enigma.md
+++ b/_posts/2023-12-23-enigma.md
@@ -7,5 +7,7 @@ tags: crypto
 
 - [La RÉALITÉ derrière IMITATION GAME (et Alan Turing)](https://www.youtube.com/watch?v=zZ-vrXXiCes)
 
+[![caption](https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Enigma-logo.svg/200px-Enigma-logo.svg.png)](https://en.wikipedia.org/wiki/Banburismus)
+
 ### see also
 - [Banburismus](https://en.wikipedia.org/wiki/Banburismus) - a cryptanalytic process developed by Alan Turing at Bletchley Park in Britain during the Second World War.
