--- a/_posts/2024-01-22-firmware.md
+++ b/_posts/2024-01-22-firmware.md
@@ -4,3 +4,5 @@ title: Firmware
 tags: firmware reverse
 ---
 > [Dumping Firmware for fun and learning](https://news.ycombinator.com/item?id=39066741)
+
+- [	Replacing x86 firmware with Linux and Go](https://news.ycombinator.com/item?id=15748900)
