--- a/_posts/2024-01-22-firmware.md
+++ b/_posts/2024-01-22-firmware.md
@@ -1,7 +1,7 @@
 ---
 published: true
 title: Firmware
-tags: firmware reverse
+tags: firmware reverse backdoor
 ---
 > [Dumping Firmware for fun and learning](https://news.ycombinator.com/item?id=39066741)
 
