--- a/_posts/2024-01-22-firmware.md
+++ b/_posts/2024-01-22-firmware.md
@@ -3,6 +3,7 @@ published: true
 title: Firmware
 tags: firmware reverse backdoor
 ---
-> [Dumping Firmware for fun and learning](https://news.ycombinator.com/item?id=39066741)
+> today there are at least two and a half kernels between Linux and the hardware. Those kernels are proprietary and, not surprisingly, exploit friendly. They run at a higher privilege level than Linux and can manipulate both the hardware and the operating system in various ways. Worse yet, exploits can be written into the flash of the system so that they persist and are difficult or impossible to remove—shredding the motherboard is likely the only way out. - [	Replacing x86 firmware with Linux and Go](https://news.ycombinator.com/item?id=15748900)
 
-- [	Replacing x86 firmware with Linux and Go](https://news.ycombinator.com/item?id=15748900)
+[Dumping Firmware for fun and learning](https://news.ycombinator.com/item?id=39066741)
+
