--- a/_posts/2024-02-15-mind-map.md
+++ b/_posts/2024-02-15-mind-map.md
@@ -7,4 +7,4 @@ tags: map markdown vscode
 
 - [How to Create a Mind Map Using markmap.js](https://mindmapexpert.com/review/how-to-create-a-mind-map-using-markmap-js/)
 
-![caption](https://github.com/dundalek/markmap/raw/master/doc/img/mindmap-screenshot1.png)
+![caption](https://user-images.githubusercontent.com/3139113/97068999-5f9e8480-15ff-11eb-8222-43d26cecade5.png)
