--- a/_posts/2024-04-13-motor-nema17.md
+++ b/_posts/2024-04-13-motor-nema17.md
@@ -7,4 +7,4 @@ tags: motor electronic
 
 Used by Dagoma
 Used by Ender 3
-Used by The 100 - Singasong-Moteur pas à pas Nema 17, 17HS4401S, 1,5 A, Nema 17, 42BYGH, 17HS4401, 4 fils pour imprimante 3D, graveur CNC XYZ, [5 pièces - 40€](https://fr.aliexpress.com/item/1005003188034586.html?aff_fcid=9b4edc004e774f108d9d1d844d189c46-1713028311316-00124-_Dl1dmv9&tt=CPS_NORMAL&aff_fsk=_Dl1dmv9&aff_platform=shareComponent-detail&sk=_Dl1dmv9&aff_trace_key=9b4edc004e774f108d9d1d844d189c46-1713028311316-00124-_Dl1dmv9&terminal_id=599ff596ba6f42a299b4876ad21bac8a&afSmartRedirect=y)
+Used by [**The 100**]({% post_url 2023-09-25-3dprinter-the100 %}) - Singasong-Moteur pas à pas Nema 17, 17HS4401S, 1,5 A, Nema 17, 42BYGH, 17HS4401, 4 fils pour imprimante 3D, graveur CNC XYZ, [5 pièces - 40€](https://fr.aliexpress.com/item/1005003188034586.html?aff_fcid=9b4edc004e774f108d9d1d844d189c46-1713028311316-00124-_Dl1dmv9&tt=CPS_NORMAL&aff_fsk=_Dl1dmv9&aff_platform=shareComponent-detail&sk=_Dl1dmv9&aff_trace_key=9b4edc004e774f108d9d1d844d189c46-1713028311316-00124-_Dl1dmv9&terminal_id=599ff596ba6f42a299b4876ad21bac8a&afSmartRedirect=y)
