--- a/_posts/2024-05-23-spider.md
+++ b/_posts/2024-05-23-spider.md
@@ -6,3 +6,5 @@ tags: animal AI
 > No trapdoor spider learns how to build a trap. No orb weaver learns how to spin a web. Trap/web building behavior is entirely programmed in their DNA. 
 >
 > If spiders can have complex behaviors hard-coded, humans certainly do too. - [HN](https://news.ycombinator.com/item?id=40450754)
+
+- [Number 16 (spider)](https://en.wikipedia.org/wiki/Number_16_(spider)) - was a wild female trapdoor spider (Gaius villosus, family Idiopidae) that lived in North Bungulla Reserve near Tammin, Western Australia. She lived an estimated 43 years and became the longest-lived spider on record.
