--- a/_posts/2024-05-24-markdown.md
+++ b/_posts/2024-05-24-markdown.md
@@ -4,5 +4,7 @@ published: true
 tags: markdown vscode
 ---
 
+### VSCode 
 
-- [VSCode display a Markdown syntax preview pane?](https://stackoverflow.com/questions/34125174/can-vscode-display-a-markdown-syntax-preview-pane) - `ctrl+k v`
+- [display a Markdown syntax preview pane?](https://stackoverflow.com/questions/34125174/can-vscode-display-a-markdown-syntax-preview-pane) - `ctrl+k v`
+	- [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner)
