--- a/_posts/2024-05-24-markdown.md
+++ b/_posts/2024-05-24-markdown.md
@@ -7,4 +7,4 @@ tags: markdown vscode
 ### VSCode 
 
 - [display a Markdown syntax preview pane?](https://stackoverflow.com/questions/34125174/can-vscode-display-a-markdown-syntax-preview-pane) - `ctrl+k v`
-	- [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner)
+	- [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner) - When clicked the associated snippet is run the current active terminal or a new one if it is busy.
