--- a/_posts/2024-05-24-markdown.md
+++ b/_posts/2024-05-24-markdown.md
@@ -8,3 +8,7 @@ tags: markdown vscode
 
 - [display a Markdown syntax preview pane?](https://stackoverflow.com/questions/34125174/can-vscode-display-a-markdown-syntax-preview-pane) - `ctrl+k v`
 	- [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner) - When clicked the associated snippet is run the current active terminal or a new one if it is busy.
+    
+    
+see also
+- [The Ultimate Guide to Writing a Great README.md for Your Project](https://medium.com/@kc_clintone/the-ultimate-guide-to-writing-a-great-readme-md-for-your-project-3d49c2023357)
