--- a/_posts/2024-05-24-markdown.md
+++ b/_posts/2024-05-24-markdown.md
@@ -8,6 +8,8 @@ tags: markdown vscode
 
 - [display a Markdown syntax preview pane?](https://stackoverflow.com/questions/34125174/can-vscode-display-a-markdown-syntax-preview-pane) - `ctrl+k v`
 	- [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner) - When clicked the associated snippet is run the current active terminal or a new one if it is busy.
+    - [Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)
+    - [Markdown Preview Enhanced](https://marketplace.visualstudio.com/items?itemName=shd101wyy.markdown-preview-enhanced)
     
     
 see also
