--- a/_posts/2024-05-24-markdown.md
+++ b/_posts/2024-05-24-markdown.md
@@ -7,10 +7,12 @@ tags: markdown vscode
 ### VSCode 
 
 - [display a Markdown syntax preview pane?](https://stackoverflow.com/questions/34125174/can-vscode-display-a-markdown-syntax-preview-pane) - `ctrl+k v`
-	- [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner) - When clicked the associated snippet is run the current active terminal or a new one if it is busy.
     - [Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)
     - [Markdown Preview Enhanced](https://marketplace.visualstudio.com/items?itemName=shd101wyy.markdown-preview-enhanced)
     
+Runner
+- [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner) - When clicked the associated snippet is run the current active terminal or a new one if it is busy.
+- [Run your README.md like a notebook in VS Code ](https://dev.to/sourishkrout/run-your-readmemd-in-vs-code-50l7)
     
 see also
 - [The Ultimate Guide to Writing a Great README.md for Your Project](https://medium.com/@kc_clintone/the-ultimate-guide-to-writing-a-great-readme-md-for-your-project-3d49c2023357)
