--- a/_posts/2024-05-24-markdown.md
+++ b/_posts/2024-05-24-markdown.md
@@ -10,6 +10,9 @@ tags: markdown vscode
     - [Markdown All in One](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)
     - [Markdown Preview Enhanced](https://marketplace.visualstudio.com/items?itemName=shd101wyy.markdown-preview-enhanced)
     
+Images
+- [Adding images and links to files to Markdown in VS Code](https://bobbyhadz.com/blog/vscode-add-image-to-markdown) - press shift & drag from image file
+
 Runner
 - [Markdown Command Runner](https://marketplace.visualstudio.com/items?itemName=Sycl.markdown-command-runner) - When clicked the associated snippet is run the current active terminal or a new one if it is busy.
 - [Run your README.md like a notebook in VS Code ](https://dev.to/sourishkrout/run-your-readmemd-in-vs-code-50l7)
